# CellularAutomata

./: .gitignore  1016 copy.ipynb  1016.ipynb  1017.ipynb  1D-ECA.ipynb  3cells-3states-cellular-automata-classifier.py  3cells-3states-cellular-automata-visualizer.py  5_cells_classifier.py  5_cells_visualizer.py  9_cells_Classifier.py  9_cells_Visualizer.py  CellularAutomata_1D_5Cells.py  CellularAutomata_2D_9Cells.py.py  DynamicMethods.ipynb  ECA_Demo.ipynb  GraphRepresent.py  GraphRepresent_Pure.py  GraphRepresent_extended.py  GraphRepresent_r=1.py  GraphRepresentations.ipynb  Graph_Represent.py  GroupMeeting.ppt  Hamming-distance-2025-9-4.ipynb  Hamming-distance-2025-9-5-Demo.ipynb  Q&A.md  README.md  Review of Graph-Based Representations for Cellular Automata.md  Rule_Classification.py  Visualize_Graph.py  Week1_Report.md  __init__.py  all_eca_rules_graph_representation.json  ca_2d_3x3_visualizer.py  ca_toolbox.py  eca_rule60_hist.npy  eca_rules_summary.csv  generate.py  graph_data_R1_K2.json  pyproject.toml  requirements.txt  (+3 more)
1D Elementary Cellular Automata (ECA)/: 1D Elementary Cellular Automata (ECA).ipynb
CA_1D_3cells_3states_Classification_DB/: classification.db  classification_db.json
CA_1D_5cells_Classification_DB/: classification.db  classification_db.json
Literature Review/: Literature Review Guide.md
notebooks/: 01_featurestest.ipynb  02_classification.ipynb  03_rule2graph_show.ipynb  04_features.ipynb  05_betterclassification.ipynb  06_test_modifications.ipynb
src/: __init__.py  case_study.py  gnn_models.py  rule2graph.py  utils.py
(+2095 files in other folders)
