[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eca_gnn"
dynamic = ["version"]
# authors = [
#     {name = "", email = ""},
# ]
# maintainers  = [
#     {name = "", email = ""},
# ]
keywords = [
    "elementary cellular automata",
    "graph neural networks",
    "spatial-temporal patterns",
    "XAI",
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
all = [
    "plotly",
    "jupyterlab",
]

# [project.urls]
# Homepage = "https://github.com"
# Repository = "https://github.com"
# PyPI = "https://pypi.org/project/eca_gnn/"

[tool.hatch.version]
path = "src/eca_gnn/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "assets",
  "*.ipynb",
  "**/*.ipynb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eca_gnn"]